<rdar://problem/12544626> [cg] RenderBlock::selectionGaps() is extremely slow when there are many floats https://bugs.webkit.org/show_bug.cgi?id=100413

Reviewed by Anders Carlsson.

RenderBlock::selectionGaps() calls GraphicsContext::clipOut(const IntRect&) for each float.
Sped up the Core Graphics implementation of this function considerably by removing an
unnecessary call to CGContextGetClipBoundingBox.

* platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContext::clipOut): Changed to use CGRectInfinite rather than the bounding
box of the current clip.



Canonical link: https://commits.webkit.org/118459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132545 268f45cc-cd09-0410-ab3c-d52691b4dbfc